--- a/app/public/css/website-style.css
+++ b/app/public/css/website-style.css
@@ -226,6 +226,11 @@
 }
 /* ## Tickets Dance */
 
+.ticket-overview-dance{
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("/images/background/background-tickets-dance.png");
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
 /* ## Tickets Dance NAV */
 .ticket-navigation-dance {
 	background-color: #151523;
@@ -306,6 +311,47 @@
 	height: 125px;
 	width: 125px;
 }
+
+/* ## Artists Dance */
+
+
+.artists-dance {
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("/images/background/background-artists-dance.png");
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
+.artists-title-dance {
+	color: white;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-size: 64px;
+	text-align: center;
+}
+
+/* ## Artists Dance Table */
+
+.td-item-image-artists-dance {
+	height: 100px;
+	width: 100px;
+	border-radius: 50%;
+	margin-left: auto;
+  	margin-right: auto;
+}
+
+.table-artists-dance {
+	width: 15%;
+	background-color: #151523;
+	color: #fff;
+	padding: 2%;
+}
+
+.td-item-artists-dance {
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+}
+
+
 /* ## Jazz */
 /* ## banner jazz */
 .Banner-jazz{
