--- a/app/public/css/website-style.css
+++ b/app/public/css/website-style.css
@@ -423,7 +423,93 @@
 	width: 212px;
 }
 
+/* ## Tickets jazz */
 
+.ticket-overview-jazz{
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("/images/background/background-tickets-dance.png");
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
+/* ## Tickets jazz NAV */
+.ticket-navigation-jazz {
+	background-color: #151523;
+	display: flex;
+}
+
+.nav-tickets-year-jazz {
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	color: white;
+	font-size: 20;
+}
+
+.navbuttons-tickets-jazz {
+	display: flex;
+	justify-content: end;
+}
+.button-AllAccess-jazz{
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	color: white;
+	background-color: #151523;
+	border: none;
+	padding: 13px; 
+	margin: 0.1%;
+	width: 180px;
+}
+
+.button-Friday-jazz{
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	color: white;
+	background-color: #151523;
+	border: none;
+	padding: 13px; 
+	margin: 0.1%;
+	width: 180px;
+}
+
+.button-Saturday-jazz{
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	color: white;
+	background-color: #151523;
+	border: none;
+	padding: 13px; 
+	margin: 0.1%;
+	width: 180px;
+}
+
+.button-Sunday-jazz{
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	color: white;
+	background-color: #151523;
+	border: none;
+	padding: 13px; 
+	margin: 0.1%;
+	width: 180px;
+}
+
+/* ## Tickets jazz Table */
+
+.table-tickets-jazz {
+	background-color: #151523;
+	color: white;
+	padding: 2%;
+	margin: 1%;
+	display: flex;
+	justify-content: space-evenly;
+}
+
+.td-item-tickets-jazz {
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-size: 25px;
+	display: inline-flex;
+	flex-direction: row;
+	margin-left: 60px;
+	margin-right: 60px;
+}
+
+.td-item-image-tickets-jazz {
+	height: 125px;
+	width: 125px;
+}
 
 /* ## culinary */
 /* ## banner culinary */
