--- a/app/public/css/website-style.css
+++ b/app/public/css/website-style.css
@@ -247,37 +247,7 @@
 	display: flex;
 	justify-content: end;
 }
-.button-AllAccess-Dance{
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-	color: white;
-	background-color: #151523;
-	border: none;
-	padding: 13px; 
-	margin: 0.1%;
-	width: 180px;
-}
-
-.button-Friday-Dance{
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-	color: white;
-	background-color: #151523;
-	border: none;
-	padding: 13px; 
-	margin: 0.1%;
-	width: 180px;
-}
-
-.button-Saturday-Dance{
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-	color: white;
-	background-color: #151523;
-	border: none;
-	padding: 13px; 
-	margin: 0.1%;
-	width: 180px;
-}
-
-.button-Sunday-Dance{
+.button-date-Dance{
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	color: white;
 	background-color: #151523;
@@ -329,7 +299,8 @@
 
 /* ## Artists Dance Table */
 
-.td-item-image-artists-dance {
+.image-artists-dance {
+	display: block;
 	height: 100px;
 	width: 100px;
 	border-radius: 50%;
@@ -337,20 +308,29 @@
   	margin-right: auto;
 }
 
-.table-artists-dance {
-	width: 15%;
+.div-artists-dance {
+	width: 18%;
 	background-color: #151523;
 	color: #fff;
 	padding: 2%;
+	margin: 4%;
+	margin-bottom: 1%;
+	display: inline-grid;
 }
 
-.td-item-artists-dance {
+.h1-artists-dance {
+	color: white;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-	display: flex;
-	flex-direction: column;
+	font-size: 35px;
 	text-align: center;
 }
 
+.p-artists-dance {
+	color: white;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-size: 18px;
+	text-align: center;
+}
 
 /* ## Jazz */
 /* ## banner jazz */
