--- a/app/public/css/website-style.css
+++ b/app/public/css/website-style.css
@@ -309,7 +309,8 @@
 }
 
 .div-artists-dance {
-	width: 18%;
+	height: 500px;
+	width: 350px;
 	background-color: #151523;
 	color: #fff;
 	padding: 2%;
