--- a/app/public/css/cms-style.css
+++ b/app/public/css/cms-style.css
@@ -763,7 +763,42 @@ canvas {
     font-weight: bold;
 }
 
+/* ## Artist cms */
+.artist-container {
+    width: 80%;
+    height: 80vh;
+    margin: 10px 0 0 20px;
 
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    overflow-y: auto;
+}
+
+.artist-item {
+    width: 20%;
+    height: 30%;
+    border: 1px solid var(--main-blue);
+    margin: 20px 2.5%;
+    padding: 10px;
+}
+
+.artist-img {
+    width: 100%;
+    height: 50%;
+    background-color: lightgray;
+}
+
+.artist-form {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 10px 0 0 0;
+}
+
+.artist-form label, .artist-form input {
+    width: 50%;
+}
 
 
 /* ## locations cms */
