--- a/app/public/css/website-style.css
+++ b/app/public/css/website-style.css
@@ -161,16 +161,6 @@
  	justify-content: center;
 }
 
-.dance-undertitle{
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-	color: white;
-	font-size: 30px;
-	text-align: center;
-	display: flex;
-	align-items: center;
- 	justify-content: center;
-}
-
 .dance-description{
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	color: white;
@@ -289,15 +279,20 @@
 	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("/images/background/background-artists-dance.png");
 	background-repeat: no-repeat;
 	background-size: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
 }
 .artists-title-dance {
 	color: white;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	font-size: 64px;
 	text-align: center;
+	justify-content: center;
+	width: 100vw;
 }
 
-/* ## Artists Dance Table */
+/* ## Artists Dance DIV */
 
 .image-artists-dance {
 	display: block;
@@ -309,14 +304,14 @@
 }
 
 .div-artists-dance {
-	height: 500px;
+	height: 450px;
 	width: 350px;
 	background-color: #151523;
 	color: #fff;
 	padding: 2%;
 	margin: 4%;
 	margin-bottom: 1%;
-	display: inline-grid;
+	justify-content: center;
 }
 
 .h1-artists-dance {
