--- a/app/public/css/cms-style.css
+++ b/app/public/css/cms-style.css
@@ -765,7 +765,7 @@ canvas {
 
 /* ## Artist cms */
 .artist-container {
-    width: 80%;
+    width: 100%;
     height: 80vh;
     margin: 10px 0 0 20px;
 
@@ -777,27 +777,34 @@ canvas {
 }
 
 .artist-item {
-    width: 20%;
-    height: 30%;
+    width: 25%;
+    height: 40%;
     border: 1px solid var(--main-blue);
     margin: 20px 2.5%;
     padding: 10px;
 }
 
 .artist-img {
-    width: 100%;
+    width: 50%;
     height: 50%;
     background-color: lightgray;
 }
 
+.artist-image {
+    width: 100%;
+    height: 100%;
+}
 .artist-form {
     display: flex;
     flex-wrap: wrap;
     margin: 10px 0 0 0;
 }
 
-.artist-form label, .artist-form input {
-    width: 50%;
+.artist-form label {
+    width: 30%;
+}
+.artist-form input, .artist-textarea {
+    width: 70%;
 }
 
 
