--- a/app/public/css/website-style.css
+++ b/app/public/css/website-style.css
@@ -328,6 +328,69 @@
 	text-align: center;
 }
 
+/* ## Locations Dance */
+
+.location-dance {
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("/images/background/background-locations-dance.jpg");
+	background-repeat:repeat;
+	background-size: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+}
+.location-title-dance {
+	color: white;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-size: 64px;
+	text-align: center;
+	justify-content: center;
+	width: 100vw;
+}
+
+.location-images-dance {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	width: 80vw;
+	height: 80vw;
+}
+/* ## Locations Dance DIV */
+
+.image-location-dance {
+	display: block;
+	height: 175px;
+	width: 200px;
+	margin-left: auto;
+  	margin-right: auto;
+}
+
+.div-location-dance {
+	height: 350px;
+	width: 350px;
+	background-color: #151523;
+	color: #fff;
+	padding: 2%;
+	margin: 4%;
+	margin-bottom: 1%;
+	justify-content: center;
+}
+
+.h1-location-dance {
+	color: white;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-size: 35px;
+	text-align: center;
+}
+
+.p-location-dance {
+	color: white;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-size: 18px;
+	text-align: center;
+}
+
+
+
 /* ## Jazz */
 /* ## banner jazz */
 .Banner-jazz{
