--- a/app/public/css/website-style.css
+++ b/app/public/css/website-style.css
@@ -672,12 +672,10 @@
 	padding: 1%;
 }
 /* ## Restaurant Page */
-.Page-indicator-top{
-	
-}
-.flex-container-restaurant{
+.Restaurant-list{
 	display: flex;
-	align-items: baseline;
+	flex-wrap: wrap;
+	width: 80%;
 }
 .flex-item-restaurant-header{
 	flex-grow: 6;
@@ -685,41 +683,22 @@
 .flex-item-restaurant-dropdown{
 	flex-grow: 4;
 }
-.restaurant-element{
-	display: flex;
-	padding: 1%;
+.Restaurant-title{
+	flex-grow: 8;
+	font-weight: bold;
 }
-.Restaurant-item-title{
-	justify-content: left;
+.Restaurant-type{
+	flex-grow: 2;
 }
-.Restaurant-item-img{
-  justify-content: left;
-  
+/* .Restaurant-summary{
+	
 }
-.Restaurant-item-text{
-	justify-content: right;
+.Restaurant-acces{
+	
 }
-.Restaurant-item-type{
-	justify-content: right;
-}
-.Restaurant-item-button{
-	justify-content: right;
-	background-color: black;
-	color: white;
-	padding: 1%;
-	border: none;
-}
-.Restaurant-item-container{
-	width: 100%;
-    height: 100%;
-    /* border: 1px solid black; */
-    margin: 0 auto;
-}
-.Restaurant-Container{
-	width: 80%;
-	justify-content: center;
-	display: flex;
-}
+.Restaurant-button{
+	
+} */
 
 
 
