--- a/app/public/css/website-style.css
+++ b/app/public/css/website-style.css
@@ -352,7 +352,7 @@
 	flex-wrap: wrap;
 	justify-content: space-around;
 	width: 80vw;
-	height: 80vw;
+	/* height: 80vw; */
 }
 /* ## Locations Dance DIV */
 
