--- a/app/public/css/website-style.css
+++ b/app/public/css/website-style.css
@@ -18,6 +18,33 @@
 }
 
 
+/* ## slider home page */
+.HomeSlider-container {
+	display: flex;
+}
+.slider-container {
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+	flex-direction: row;
+}
+.slider-element {
+   padding: 1%;
+    width: 35%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+ }
+ .slider-img {
+    width: 100%;
+    height: 270px;
+	background-color: grey;
+ }
+
+
 
 /* ## nav Homepage^^ */
 .nav-website{
@@ -623,19 +650,9 @@
     display: flex;
 	margin: 0 auto;
 }
-.slider-element {
-   padding: 1%;
-    width: 35%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
- }
  .slider-img {
     width: 100%;
     height: 270px;
-    background-color: gray;
  }
  .culinary-slider-typeContainer {
 	 width: 100%;
@@ -726,6 +743,7 @@
 
 .restaurant-item {
 	border: 1px solid black;
+	border-radius: 5px;
 	width: 90vw;
 	height: 200px;
 
@@ -735,9 +753,9 @@
 }
 
 .restaurant-item-img {
-	background-color: grey;
-	width: 20%;
-	height: 100%;
+	width: 15%;
+	margin: 5px;
+	border-radius: 5px;
 }
 
 .restaurant-item-content {
@@ -888,10 +906,9 @@ article p{
     display: flex;
 }
 
-.Socialmedia{
+.home-section-header{
     width: 80%;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 70px auto 0 auto;
 }
 
 i {
