--- a/app/public/css/cms-style.css
+++ b/app/public/css/cms-style.css
@@ -781,6 +781,7 @@ canvas {
 .artist-item {
     height: 400px;
     border: 1px solid var(--main-blue);
+    border-radius: 5px;
     margin: 20px 2.5%;
     padding: 10px;
 }
@@ -831,6 +832,7 @@ canvas {
 .location-item {
     height: 400px;
     border: 1px solid var(--main-blue);
+    border-radius: 5px;
     margin: 20px 2.5%;
     padding: 10px;
 }
