--- a/app/public/css/cms-style.css
+++ b/app/public/css/cms-style.css
@@ -761,6 +761,7 @@ canvas {
 .orders-table tbody tr:hover {
     background-color: var(--main-green);
     font-weight: bold;
+    color: var(--white);
 }
 
 
@@ -782,6 +783,7 @@ canvas {
     height: 400px;
     border: 1px solid var(--main-blue);
     border-radius: 5px;
+    box-shadow: 3px 3px var(--form-input-border);
     margin: 20px 2.5%;
     padding: 10px;
 }
@@ -833,6 +835,7 @@ canvas {
     height: 400px;
     border: 1px solid var(--main-blue);
     border-radius: 5px;
+    box-shadow: 3px 3px var(--form-input-border);
     margin: 20px 2.5%;
     padding: 10px;
 }
