--- a/app/public/css/website-style.css
+++ b/app/public/css/website-style.css
@@ -1131,8 +1131,47 @@ article p{
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	font-size: 72px;
 	text-align: center;
-	display: flex;
-	align-items: center;
- 	justify-content: center;
-	padding: 6%;
 }
+.Paymentselector{
+	display: flex;
+	justify-content: center;
+	padding-bottom: 5%;
+}
+.Paymentselector-item{
+	padding-left: 10%;
+    padding-right: 10%;
+}
+.Paymentselector-item:hover {
+	background-color: #bcc6da;
+	border-radius: 10%;
+  }
+.PayementImage{
+	height: 200px;
+}
+.PayementTitle{
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	text-align: center;
+	font-size: large;
+}
+.payment-link{
+	color: #151523;
+	text-decoration: none;
+}
+.Back-button{
+	padding-left: 1%;
+    padding-right: 1%;
+    margin-left: 15%;
+    margin-top: 5%;
+    color: white;
+    background-color: black;
+    border: none;
+    padding-top: 10px;
+	padding-bottom: 10px;
+}
+.PaymentHeader-detail{
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	text-align: center;
+	padding-bottom: 6%;
+	padding-left: 6%;
+	padding-right: 6%;
+  }
