--- a/app/public/css/website-style.css
+++ b/app/public/css/website-style.css
@@ -1149,18 +1149,18 @@ i {
 	padding: 5px 20px 15px 20px;
   }
   
-  input[type=text] {
+  /* input[type=text] {
 	width: 100%;
 	margin-bottom: 20px;
 	padding: 12px;
 	border: 1px solid #ccc;
 	border-radius: 3px;
-  }
+  } */
   
-  label {
+  /* label {
 	margin-bottom: 10px;
 	display: block;
-  }
+  } */
   
   .icon-container {
 	margin-bottom: 20px;
