--- a/app/public/css/cms-style.css
+++ b/app/public/css/cms-style.css
@@ -29,7 +29,7 @@
     min-width: 1600px;
     max-width: 2560px;
     margin: 0 auto;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 
@@ -423,7 +423,7 @@ canvas {
     width: 100%;
     /* height: 42vh; */
 
-    margin: 0 0 10vh 0;
+    margin: 0 0 5vh 0;
 
     display: flex;
     flex-wrap: wrap;
@@ -609,7 +609,9 @@ canvas {
 
 /* ## table for event items */
 .table-wrapper {
-    max-height: 43vh;
+    /* min-height: 40vh; */
+    /* max-height: 45vh; */
+    max-height: 35vh;
     overflow-y: scroll;
 }
 
