--- a/app/public/css/cms-style.css
+++ b/app/public/css/cms-style.css
@@ -531,7 +531,8 @@ canvas {
 .overview-btns-right li a {
     text-decoration: none;
     font-size: 1.5rem;
-    margin: 0 20px 0 0;
+    margin: 0 20px 0 20px;
+    color: var(--main-blue)
 }
 
 .overview-btns-right li a img {
@@ -1067,4 +1068,18 @@ canvas {
 
 .ticket-detail-container button {
     width: 50%;
+}
+
+
+
+.restaurant-form {
+    width: 50vw;
+    /* border: 1px solid black; */
+    margin: 0 0 0 20px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.restaurant-form .form-item {
+    margin: 10px 5px;
 }
