--- a/app/public/css/cms-style.css
+++ b/app/public/css/cms-style.css
@@ -776,46 +776,69 @@ canvas {
 .artist-container {
     width: 100%;
     height: 80vh;
-    margin: 10px 0 0 20px;
+    margin: 10px 0 0 0px;
 
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-around;
 
     overflow-y: auto;
 }
 
 .artist-item {
-    height: 400px;
+    width: 30%;
     border: 1px solid var(--main-blue);
-    border-radius: 5px;
-    box-shadow: 3px 3px var(--form-input-border);
-    margin: 20px 2.5%;
-    padding: 10px;
+    border-radius: 10px;
+    margin: 0 0 20px 0;
+    background-color: var(--form-input-bg);
 }
 
-.artist-img {
-    width: 50%;
+.artist-img-wrapper {
+    width: 90%;
     height: 50%;
-    background-color: lightgray;
+    margin: 20px auto;
 }
 
-.artist-image {
+.artist-img-wrapper img {
     width: 100%;
     height: 100%;
+    border-radius: 10px;
 }
+
 .artist-form {
     display: flex;
-    flex-wrap: wrap;
-    margin: 10px 0 0 0;
+    flex-direction: column;
+}
+
+.artist-form label, .artist-form input, .artist-form textarea {
+    margin: 0 0 0 20px;
+    width: 70%;
+    color: var(--main-blue)
+}
+
+.artist-form input, .artist-form textarea {
+    margin-bottom: 10px;
+    border-radius: 5px;
+    border: 1px solid var(--main-blue);
+    padding: 3px 5px;
 }
 
 .artist-form label {
-    width: 30%;
+    font-weight: bold;
 }
-.artist-form input, .artist-textarea {
-    width: 70%;
+
+.artist-cms-button {
+    width: 20%;
+    background-color: var(--white);
+    border: 2px solid var(--main-blue);
+    border-radius: 5px;
+    margin: 0 0 5px 20px;
+    font-weight: bold;
 }
+
+
+
 
 .artist-item-add {
     height: 250px;
