--- a/app/public/css/cms-style.css
+++ b/app/public/css/cms-style.css
@@ -443,12 +443,19 @@ canvas {
     pointer-events: all;
 }
 
-.overview-info {
+.overview-info{
     width: calc(60% - 20px);
-    height: 80%;
+    height: 48vh;
     margin: 0 0 0 20px;
     padding: 0 9% 0 0;
 
+    /* display: flex;
+    flex-direction: column;
+    flex-wrap: wrap; */
+}
+
+.overview-info form {
+    max-height: 100%;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
